# toolbox

./: .gitignore  Cargo.toml  README.md  book.toml
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
doc/: index.md  package-lock.json  package.json
doc/.vitepress/: config.mts
scripts/: create-axum-justfile.py  create-justfile.py  test.py  write-commit.py
src/: constants.rs  lib.rs  main.rs  toolbox.rs
src/commands/: bookmarks.rs  generate.rs  mod.rs  script.rs  self_cmd.rs
src/config/: app.rs  database.rs  db.rs
src/database/: repository.rs  store.rs
src/errors/: app.rs  database.rs  file_system.rs  mod.rs
src/helpers/: console.rs  file_system.rs  mod.rs  parser.rs
src/parsers/: generator.rs  mod.rs  scripts.rs  store.rs
src/subcommands/: generate.rs  script.rs  store.rs
src/workers/: generate_gitignore.rs  generate_readme.rs  generate_service.rs  generator.rs  gui.rs  mod.rs  scripts.rs  store.rs
templates/: Toolbox.toml
