
[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "A set of extensible tools to accelerate software development"
edition = "2021"
name = "toolbox"
version = "1.1.5"
license = "Apache-2.0"

[lib]
name = "lib_toolbox"
path = "src/lib.rs"

[[bin]]
name = "tb"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["cargo", "unstable-doc"] }
config = "0.15.19"
confy = "2.0.0"
console = "0.15.11"
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "completion", "editor"] }
dirs = "5.0.1"
include_dir = "0.7.4"
lazy_static = "1.5.0"
rusqlite = { version = "0.34.0", features = [
    "backup",
    "bundled",
    "chrono",
    "serde_json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
